--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+#root {
+  height: 100%;
+}
 .App {
+  z-index: 0;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 7fr 3fr 1fr;
+  overflow: hidden;
+}
+
+.Script {
+  grid-column: 1 / 4;
+  grid-row: 2;
+  background-color: black;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Footer {
+  grid-column: 1 / 4;
+  grid-row: 4;
+  background-color: blue;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header {
+  grid-column: 1 / 4;
+  grid-row: 1;
+  background-color: orange;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Parameters {
+  grid-column: 1 / 2;
+  grid-row: 3;
+  background-color: green;
+
 }
 
-.App-link {
-  color: #61dafb;
+.Outputs {
+  grid-column: 2;
+  grid-row: 3;
+  background-color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
