Fixed inputs and removed outputs

--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,21 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 7fr 3fr 1fr;
+  grid-template-columns: 5fr 1fr;
+  grid-template-rows: 1fr 12fr 1fr;
   overflow: hidden;
 }
 
 .Script {
-  grid-column: 1 / 4;
+  grid-column: 1 / 3;
   grid-row: 2;
   background-color: black;
   text-align: center;
 }
 
 .Footer {
-  grid-column: 1 / 4;
-  grid-row: 4;
+  grid-column: 1 / 3;
+  grid-row: 3;
   background-color: blue;
   text-align: center;
 }
@@ -33,16 +33,10 @@
 }
 
 .Parameters {
-  grid-column: 1 / 2;
-  grid-row: 3;
+  grid-column: 2;
+  grid-row: 2;
   background-color: green;
 
-}
-
-.Outputs {
-  grid-column: 2;
-  grid-row: 3;
-  background-color: red;
 }
 
 
