fixed centering issue

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,24 @@
 
 } */
 
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.App {
+  height: 100%;
+  width: 100%;
+}
+
+.Script {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
 
 
