--- a/src/App.css
+++ b/src/App.css
@@ -58,5 +58,22 @@
   overflow: hidden;
 }
 
+.inputs {
+  margin-left: 30px;
+}
+
+.slider {
+  margin-top: 20px; 
+
+}
+
+.checkbox {
+
+  margin-top: 20px; 
+}
+
+.header-spacing {
+margin-bottom: 2px;
+}
 
 
