--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   display: flex;
   height: 100%;
   width: 100%;
+  background-color: #f9f9f9;
   align-items: center;
   justify-content: center;
   overflow: hidden;
