--- a/src/App.css
+++ b/src/App.css
@@ -77,4 +77,15 @@
 margin-bottom: 2px;
 }
 
+.download-button {
+  background-color: blue;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 
