--- a/src/App.css
+++ b/src/App.css
@@ -88,4 +88,10 @@ margin-bottom: 2px;
   margin-bottom: 10px;
 }
 
+.actions-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
