--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  margin-top: -50px;
+  margin-top: 15px;
 }
 
 .inputs {
@@ -79,7 +79,7 @@ margin-bottom: 2px;
 }
 
 .download-button {
-  background-color: blue;
+  background-color: rgb(46, 46, 245);
   color: white;
   padding: 10px;
   border: none;
@@ -93,6 +93,15 @@ margin-bottom: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+  position: absolute;
+  bottom: 10%;
+  left: 50%; 
+  transform: translateX(-50%); 
+  z-index: 10;
+  background-color: rgba(252, 252, 253, 0.90); 
+  padding: 10px 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 
+}
 
