--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,23 @@ margin-bottom: 2px;
 
 }
 
+.input-container {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 10%;
+  transform: translateX(-50%); 
+  z-index: 10;
+  background-color: rgba(252, 252, 253, 0.90); 
+  padding: 10px 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+  height: 50px;
+  margin-right: -50px;
+
+}
+
+
 body {
   overflow: hidden;
 }
