--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,14 @@ margin-bottom: 2px;
 body {
   overflow: hidden;
 }
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: #999;
+  cursor: pointer;
+}
