--- a/src/animation/SideBar/TopSection/style.scss
+++ b/src/animation/SideBar/TopSection/style.scss
@@ -1,22 +1,24 @@
 .SideBar__TopSection {
-    width: 100%;
-    height: 4em;
-    background-color: white;
-    -webkit-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
+  width: 100%;
+  height: 4em;
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
 
-    .align-right {
-      margin-left: auto;
-    }
+.align-right {
+  margin-left: auto;
+}
 
-    .Sketch_button {
-    margin-right: 10px;
-  }
-  }
+.Sketch_button {
+  margin-right: 35px;
+  margin-left: 15px;
+}
 
 .SideBar__TopSection__content {
   display: flex;
@@ -35,13 +37,15 @@
 }
 
 .Button2 {
-  margin-left: 60vw;
-  margin-right: 20px;
   z-index: 2;
-
 }
 
 .find-out-link {
   text-decoration: underline;
   color: #00308F;
+}
+
+.right-container {
+  display: flex;
+  align-items: center;
 }
